# 3D-Garment-Extractor

./: .gitignore  README.md  allocate-vs.sbatch  download_models.py  pyproject.toml  requirements_cluster_exact.txt  run_inference.sh  setup.sh
src/CloSe/: README.md  create_npz.py  environment_close.yml  extract_garment.py
src/CloSe/docs/: dataset.md
src/CloSe/pretrained/: closenet_cfg.yaml
src/Human3Diffusion/: infer.py
src/Human3Diffusion/core/: tsdf_mesh.py
