[project]
name = "3D-Garment-Extractor"
version = "0.1.0"
description = "Extracting 3D garments from RGB images via Human-3Diffusion and CloSe-Net"
requires-python = "==3.10.*"
dependencies = [
    "torch==2.1.0",
    "torchvision==0.16.0",
    "xformers==0.0.22.post4",
    "numpy<2",
    "open3d",
    "trimesh",
    "opencv-python",
    "accelerate==0.24.1",
    "diffusers==0.24.0",
    "transformers==4.35.2",
    "huggingface_hub==0.20.3"
]