[project]
name = "3D-Garment-Extractor"
version = "0.1.0"
description = "Extracting 3D garments from RGB images via Human-3Diffusion and CloSe-Net"
requires-python = "==3.10.*"
dependencies = [
    "torch==2.1.0",
    "torchvision==0.16.0",
    "xformers==0.0.22.post7",
    "numpy==1.26.4",
    "plyfile==1.1.3",
    "rembg==2.0.69",
    "open3d==0.19.0",
    "trimesh==4.12.2",
    "opencv-python-headless==4.10.0.84",
    "accelerate==0.24.1",
    "diffusers==0.24.0",
    "transformers==4.35.2",
    "huggingface-hub==0.20.3",
    "scipy==1.15.3",
    "einops",
    "omegaconf",
    "onnxruntime"
]